#13203: Bugfix: Business account - UI - Payment Overdue page on Mobile Web not showing properly on wide screen - wide screen style added

--- a/css/business-register.css
+++ b/css/business-register.css
@@ -464,7 +464,7 @@ background: linear-gradient(to bottom, rgba(0,191,165,1) 0%, rgba(0,148,128,1) 1
 .card-container.bus-repay {
 	width: 850px;
 	height: auto;
-	padding: 32px;
+	padding: 16px 32px 32px;
 	margin: 0 auto 80px;
 	box-sizing: border-box;
 	background-color: #fff;
@@ -593,7 +593,7 @@ background: linear-gradient(to bottom, rgba(0,191,165,1) 0%, rgba(0,148,128,1) 1
 	display: inline-block;
 }
 .bus-reg-plan.repay .repay-breakdown-tb tr th:nth-child(3), .bus-reg-plan.repay .repay-breakdown-tb tr td:nth-child(3) {
-	width: 85px;
+	width: calc(100% - 244px);
 	padding-right: 12px;
 	box-sizing: border-box;
 	text-align: right;
@@ -623,7 +623,7 @@ background: linear-gradient(to bottom, rgba(0,191,165,1) 0%, rgba(0,148,128,1) 1
 }
 .bus-reg-plan.repay .repay-breakdown-tb tr:last-child td:last-child {
 	padding-right: 12px;
-	width: 214px;
+	width: 210px;
 	text-align: right;
 }
 @media only screen and (max-width: 800px) {
@@ -663,7 +663,7 @@ background: linear-gradient(to bottom, rgba(0,191,165,1) 0%, rgba(0,148,128,1) 1
 	}
 	.bus-reg-plan.repay .repay-breakdown-tb tr:last-child td:last-child {
 		width: 70%;
-		min-width: 214px;
+		min-width: 210px;
 	}
 	.main-mid-pad.bus-repay .btn-container {
 		text-align: center;
